# Arti

./: AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  environment.lock.yaml  environment.yml  pyproject.toml  setup.cfg  setup.py
configs/: _000_ec_feature_response_table.toml
data/: .gitignore
data/preprocessed/: .gitignore
docs/: conf.py  index.md  index.rst  readme.md  requirements.txt
models/: .gitignore
notebooks/: _000_ec_feature_response_table.py  _000_ethan_target_response_table.py  _00_kg_main_artifact.py  _01_final_ors2025_kg_data_cleaning.py  _01_kg_data_cleaning.py  _02_kg_exploratory_analysis.py  _03_kg_model_selection.py  _04_kg_hyperparameter_tuning.py  environment.lock.yaml  ors_01_kg_data_cleaning.py  template.ipynb  template.py
notebooks/html/: 00-kg-main-artifact.html  01-kg-data-cleaning.html  02-kg-exploratory-analysis.html  03-kg-model-selection.html  04-kg-hyperparameter-tuning.html
references/: Output_History_main_3.20_m_wH_VV.csv  vahid-hka-updated-outputs.csv
reports/: 00-kg-main-artifact.html  01-kg-data-cleaning.html  02-kg-exploratory-analysis.html  03-kg-model-selection.html  embed.html
scripts/: train_model.py
src/artifact/: __init__.py  constants.py  core_api.py  datasets.py  helpers.py  plotting.py
src/artifact.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
